修改了listof